knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Ability_to_Accelerate__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Accelerate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ability to Accelerate</label>
    <type>Checkbox</type>
</CustomField>