knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Accelerate_Process__c.field-meta.xml
<CustomField>
    <fullName>Accelerate_Process__c</fullName>
    <label>Accelerate Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accelerate Proposal</fullName>
            </value>
            <value>
                <fullName>Must Win</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>