knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Account_Contracting_DL__c.field-meta.xml
<CustomField>
    <fullName>Account_Contracting_DL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Contracting DL</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Account Contracting DL)</relationshipLabel>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>