knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <inlineHelpText>Place the date of the first service start date here.  Each service should have its associated start dates listed on the Service record.</inlineHelpText>
    <label>1st Service Start Date</label>
    <type>Date</type>
</CustomField>