knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Added_Options__c.field-meta.xml
<CustomField>
    <fullName>Added_Options__c</fullName>
    <label>Added Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>HM</fullName>
            </value>
            <value>
                <fullName>ICP</fullName>
            </value>
            <value>
                <fullName>ICU</fullName>
            </value>
            <value>
                <fullName>MyPoint</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>OA (Operational Assessment)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>POS Collections</fullName>
            </value>
            <value>
                <fullName>Post-Acute</fullName>
            </value>
            <value>
                <fullName>Scribes</fullName>
            </value>
            <value>
                <fullName>Telemedicine</fullName>
            </value>
            <value>
                <fullName>UC</fullName>
            </value>
            <value>
                <fullName>WW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>