knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Added_to_Signed__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added to Signed</label>
    <type>Checkbox</type>
</CustomField>