knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Adjusted_Program_Count__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Program_Count__c</fullName>
    <formula>Program_Count__c*Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Program Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>