knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Annualized__c.field-meta.xml
<CustomField>
    <fullName>Annualized__c</fullName>
    <label>Annualized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>