knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Annualized_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Revenue__c</fullName>
    <formula>Monthly_Fee__c * 12 + Implementation_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PE Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>