knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/BD_Finance_Activities_Begun__c.field-meta.xml
<CustomField>
    <fullName>BD_Finance_Activities_Begun__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of PR1050558-2143</description>
    <inlineHelpText>Volume, Reimbursement, etc</inlineHelpText>
    <label>BD Finance Activities Begun</label>
    <type>Checkbox</type>
</CustomField>