knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/BDA_Assigned__c.field-meta.xml
<CustomField>
    <fullName>BDA_Assigned__c</fullName>
    <label>BDA Assigned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Susan</fullName>
            </value>
            <value>
                <fullName>Yes - Pam</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - Mark</fullName>
            </value>
            <value>
                <fullName>Yes - Felecia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>