knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/BDA_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>BDA_Assignment_Date__c</fullName>
    <businessOwnerUser>zachary_kieffer@sg.bd</businessOwnerUser>
    <label>BDA Assignment Date</label>
    <type>Date</type>
</CustomField>