knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Bid_Process__c.field-meta.xml
<CustomField>
    <fullName>Bid_Process__c</fullName>
    <label>RFP Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public RFP</fullName>
            </value>
            <value>
                <fullName>RFP By Invitation</fullName>
            </value>
            <value>
                <fullName>Formal Proposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>