knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Business_Dev_Dir__c.field-meta.xml
<CustomField>
    <fullName>Business_Dev_Dir__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Dev Dir</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>