knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Business_Dev_Mgr__c.field-meta.xml
<CustomField>
    <fullName>Business_Dev_Mgr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Dev Mgr</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>