knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/CE_by_Vol__c.field-meta.xml
<CustomField>
    <fullName>CE_by_Vol__c</fullName>
    <label>CE by Vol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>