knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Christus_JV__c.field-meta.xml
<CustomField>
    <fullName>Christus_JV__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For any deals falling under the Christus JV</inlineHelpText>
    <label>Christus JV</label>
    <type>Checkbox</type>
</CustomField>