knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Client_Questionnaire_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Questionnaire_Status__c</fullName>
    <label>Client Questionnaire Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Received</fullName>
                <default>true</default>
                <label>Not Received</label>
            </value>
            <value>
                <fullName>Assessment Submitted</fullName>
            </value>
            <value>
                <fullName>Ready for Review</fullName>
            </value>
            <value>
                <fullName>Submission Incomplete</fullName>
            </value>
            <value>
                <fullName>Info Due Process Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>