knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Clinicians_Notified__c.field-meta.xml
<CustomField>
    <fullName>Clinicians_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check = Yes</inlineHelpText>
    <label>Clinicians Notified</label>
    <type>Checkbox</type>
</CustomField>