knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Close_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Close_Narrative__c</fullName>
    <label>Closed / Lost Narrative</label>
    <type>TextArea</type>
</CustomField>