knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solution – Recruitment/Coverage model</fullName>
            </value>
            <value>
                <fullName>Solution – Economics (Overall cost)</fullName>
            </value>
            <value>
                <fullName>Solution – Multiple Service Lines</fullName>
            </value>
            <value>
                <fullName>Solution – References/Service</fullName>
            </value>
            <value>
                <fullName>Solution – Clinical Quality/Medical Leadership</fullName>
            </value>
            <value>
                <fullName>Solution - Strategy presented did not meet business needs</fullName>
            </value>
            <value>
                <fullName>Sales Team – Ease of Purchase</fullName>
            </value>
            <value>
                <fullName>Sales Team – Responsiveness</fullName>
            </value>
            <value>
                <fullName>Company – Size and/or Presence in Market</fullName>
            </value>
            <value>
                <fullName>Company – Reputation and/or Future Direction</fullName>
            </value>
            <value>
                <fullName>Preferred Competitor</fullName>
            </value>
            <value>
                <fullName>Project Complete</fullName>
            </value>
            <value>
                <fullName>No Change Made</fullName>
            </value>
            <value>
                <fullName>No Bid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pipeline Cleanup - not real oppty - Closed by Sales Ops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>