knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>b/w 0% and 25%</inlineHelpText>
    <label>Closer</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>