knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Coding_and_Documentation_DL__c.field-meta.xml
<CustomField>
    <fullName>Coding_and_Documentation_DL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coding and Documentation DL</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Coding and Documentation DL)</relationshipLabel>
    <relationshipName>Opportunities9</relationshipName>
    <type>Lookup</type>
</CustomField>