knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <inlineHelpText>Select all competitors, including the incumbent if applicable, who are fighting to win the business.</inlineHelpText>
    <label>Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEAMHealth</fullName>
            </value>
            <value>
                <fullName>US Acute Care Solutions (USACS)</fullName>
            </value>
            <value>
                <fullName>Envision</fullName>
            </value>
            <value>
                <fullName>Vituity</fullName>
            </value>
            <value>
                <fullName>Sound Physicians</fullName>
            </value>
            <value>
                <fullName>Apollo MD</fullName>
            </value>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Regional Group</fullName>
            </value>
            <value>
                <fullName>Local Groups</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>