knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Confidential_Deal__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Deal__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check = Yes</inlineHelpText>
    <label>Confidential Deal</label>
    <type>Checkbox</type>
</CustomField>