knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Contract_Customer_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Customer_Signed_Date__c</fullName>
    <description>Contract Customer Signed Date</description>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>