knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <inlineHelpText>Enter the length in months of the program contract.</inlineHelpText>
    <label>Contract Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>