knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date__c</fullName>
    <label>Converted Date</label>
    <type>Date</type>
</CustomField>