knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/CORE_GM_Recognized_this_Year__c.field-meta.xml
<CustomField>
    <fullName>CORE_GM_Recognized_this_Year__c</fullName>
    <formula>IF( YEAR( Target_Contract_Start_Date__c )= YEAR( TODAY() )  , 

( Total_Incremental_Margin__c /365)* (365-DAYOFYEAR( Target_Contract_Start_Date__c )), 


0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the estimated portion of Gross Margin to be recognized in current year based on start date</inlineHelpText>
    <label>CORE Margin - Recognized this Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>