knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Count_of_All_Services__c.field-meta.xml
<CustomField>
    <fullName>Count_of_All_Services__c</fullName>
    <formula>Count_of_CORE_Services__c +  Count_of_Non_CORE_Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of All Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>