knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Count_of_CORE_Services__c.field-meta.xml
<CustomField>
    <fullName>Count_of_CORE_Services__c</fullName>
    <label>Count of CORE Services</label>
    <summaryFilterItems>
        <field>Services__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Emergency Medicine (EM), Hospital Medicine (HM), Free Standing ED (FSED), Integrated Care Physician (ICP), Intensive Care Unit (ICU), Urgent Care (UC), Core Place Holder</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Services__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Services__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>