knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Count_of_Non_CORE_Services__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Non_CORE_Services__c</fullName>
    <label>Count of Non-CORE Services</label>
    <summaryFilterItems>
        <field>Services__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Other Service Lines (NON-CORE), Connected Care - Complete, Connected Care - During, Connected Care - Next, Connected Care - Proactive, Value-Based Solutions, Virtual &amp; Hybrid Care Solutions, Innovation / Non-commercial</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Services__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Services__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>