knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Created_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is mapped from Leads.</description>
    <label>Created from Lead</label>
    <type>Checkbox</type>
</CustomField>