knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/DAM_Date__c.field-meta.xml
<CustomField>
    <fullName>DAM_Date__c</fullName>
    <label>DAM Date</label>
    <type>Date</type>
</CustomField>