knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/DAM_Notes__c.field-meta.xml
<CustomField>
    <fullName>DAM_Notes__c</fullName>
    <label>DAM Notes</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>