knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/DAM_Status__c.field-meta.xml
<CustomField>
    <fullName>DAM_Status__c</fullName>
    <label>DAM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Model Confirmed</fullName>
                <label>Model Confirmed (Provisional)</label>
            </value>
            <value>
                <fullName>Model Approved (for contracting)</fullName>
            </value>
            <value>
                <fullName>Additional Follow-up Needed</fullName>
                <isActive>false</isActive>
                <label>Additional Follow-up Needed</label>
            </value>
            <value>
                <fullName>Deal Declined</fullName>
                <isActive>false</isActive>
                <label>Deal Declined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>