knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Days_to_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Proposal__c</fullName>
    <formula>DATETIMEVALUE(Proposal_Date__c) - DATETIMEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Proposal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>