knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Days_until_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_until_Start__c</fullName>
    <formula>Target_Contract_Start_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days until Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>