knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Deal_Category__c.field-meta.xml
<CustomField>
    <fullName>Deal_Category__c</fullName>
    <formula>TEXT(Deal__r.Deal_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Category</label>
    <type>Text</type>
</CustomField>