knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Deal_Category_Old__c.field-meta.xml
<CustomField>
    <fullName>Deal_Category_Old__c</fullName>
    <label>Deal Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>JV</fullName>
            </value>
            <value>
                <fullName>Innovations</fullName>
            </value>
            <value>
                <fullName>Steady State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>