knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Decision_Due_Date_MOU__c.field-meta.xml
<CustomField>
    <fullName>Decision_Due_Date_MOU__c</fullName>
    <label>Decision Due Date (MOU)</label>
    <type>Date</type>
</CustomField>