knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <formula>Account.Director__r.FirstName&amp;&apos; &apos;&amp; Account.Director__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director</label>
    <type>Text</type>
</CustomField>