knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Division 1</fullName>
            </value>
            <value>
                <fullName>Division 2</fullName>
            </value>
            <value>
                <fullName>Division 3</fullName>
            </value>
            <value>
                <fullName>All Divisions</fullName>
            </value>
            <value>
                <fullName>Consulting Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>