knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Earned_Commission__c.field-meta.xml
<CustomField>
    <fullName>Earned_Commission__c</fullName>
    <formula>Eligible_Commission_Formula__c * Total_Earned_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Earned Commission % x Eligible Commission</inlineHelpText>
    <label>Earned Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>