knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Eligible_Commission__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Commission__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>% of Commission Basis able to be earned (can not exceed 10%)</inlineHelpText>
    <label>Eligible Commission %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>