knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Eligible_Commission_Basis__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Commission_Basis__c</fullName>
    <formula>0.00</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From YR1 Tot mgn</inlineHelpText>
    <label>Eligible Commission Basis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>