knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Eligible_Commission_Formula__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Commission_Formula__c</fullName>
    <formula>Eligible_Commission__c * Eligible_Commission_Basis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Eligible Commission% x Eligible Commission Basis</inlineHelpText>
    <label>Eligible Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>