knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/EM_Coverage_Hrs_24hr_Period__c.field-meta.xml
<CustomField>
    <fullName>EM_Coverage_Hrs_24hr_Period__c</fullName>
    <label>EM Coverage Hrs/24hr Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>